[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/ship.png" type="Texture" id=1]
[ext_resource path="res://assets/trees.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/pirate_red.png" type="Texture" id=3]
[ext_resource path="res://assets/pirate_girl.png" type="Texture" id=4]
[ext_resource path="res://assets/pirate_blue.png" type="Texture" id=5]
[ext_resource path="res://assets/yes.png" type="Texture" id=6]
[ext_resource path="res://assets/no.png" type="Texture" id=7]
[ext_resource path="res://assets/x.png" type="Texture" id=8]
[ext_resource path="res://YesButton.gd" type="Script" id=9]
[ext_resource path="res://NoButton.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/wrong.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/ding.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/francesca/Francesca3.wav" type="AudioStream" id=13]
[ext_resource path="res://Pirate.gd" type="Script" id=14]
[ext_resource path="res://assets/parrot.png" type="Texture" id=15]
[ext_resource path="res://assets/sounds/luigi/4.excelent-raspuns-se-vede-ca.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/richard/Richard-9.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/richard/Richard-8.wav" type="AudioStream" id=18]
[ext_resource path="res://Question.gd" type="Script" id=19]
[ext_resource path="res://assets/question.png" type="Texture" id=20]
[ext_resource path="res://assets/check.png" type="Texture" id=21]
[ext_resource path="res://assets/sounds/narator/Narator-14-CorabieNu.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/sounds/luigi/3.Arrr-nu-sunt-de-aceeasi-parere.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/sounds/narator/Narator-12-CorabieAlege.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/sounds/narator/Narator-13-CorabieDa.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/sounds/narator/Narator-11-PiratiiAuAjuns.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sounds/richard/Richard-7.wav" type="AudioStream" id=35]
[ext_resource path="res://VoicesJungleScene.gd" type="Script" id=49]
[ext_resource path="res://JungleScene.gd" type="Script" id=50]

[sub_resource type="Animation" id=1]
resource_name = "Leave"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PirateGirl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, -74 ), Vector2( 628.356, -65.5911 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PirateRed:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 371.728, -98.2724 ), Vector2( 726.586, -103.318 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PirateBlue:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 426.964, -199.179 ), Vector2( 696.051, -219.361 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Parrot:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 423.897, 224.054 ), Vector2( 1138.66, 160.146 ) ]
}

[node name="JungleScene" type="Node2D"]
script = ExtResource( 50 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.419396, 0.417791 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" type="TextureRect" parent="."]
margin_left = -480.993
margin_top = -188.361
margin_right = 519.007
margin_bottom = 884.639
rect_scale = Vector2( 0.706316, 0.657555 )
rect_pivot_offset = Vector2( 463.701, 581.855 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parrot" type="TextureButton" parent="."]
margin_left = 423.897
margin_top = 224.054
margin_right = 917.897
margin_bottom = 622.055
rect_scale = Vector2( -0.239492, 0.253915 )
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PirateRed" type="TextureButton" parent="."]
margin_left = 371.728
margin_top = -98.2724
margin_right = 1157.73
margin_bottom = 931.728
rect_scale = Vector2( 0.18884, 0.168363 )
rect_pivot_offset = Vector2( 373.811, 517.926 )
texture_normal = ExtResource( 3 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PirateBlue" type="TextureButton" parent="."]
margin_left = 426.964
margin_top = -199.179
margin_right = 1383.96
margin_bottom = 860.821
rect_scale = Vector2( 0.17864, 0.171665 )
rect_pivot_offset = Vector2( 483.133, 617.374 )
texture_normal = ExtResource( 5 )
script = ExtResource( 14 )

[node name="PirateGirl" type="TextureButton" parent="."]
margin_left = 144.0
margin_top = -74.0
margin_right = 1101.0
margin_bottom = 986.0
rect_scale = Vector2( 0.198835, 0.20453 )
rect_pivot_offset = Vector2( 477.248, 561.536 )
texture_normal = ExtResource( 4 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="TextureButton" parent="."]
margin_left = 480.025
margin_top = 86.3881
margin_right = 733.025
margin_bottom = 339.388
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 162.961, 90.4633 )
texture_normal = ExtResource( 6 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongAnswer" type="TextureRect" parent="YesButton"]
margin_left = -169.38
margin_top = -344.466
margin_right = 490.62
margin_bottom = 345.534
rect_scale = Vector2( 0.266667, 0.258621 )
rect_pivot_offset = Vector2( 346.51, 369.291 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="TextureButton" parent="."]
margin_left = 666.402
margin_top = 92.1733
margin_right = 919.402
margin_bottom = 345.173
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 161.134, 82.6809 )
texture_normal = ExtResource( 7 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSymbol" type="TextureRect" parent="NoButton"]
margin_left = 140.112
margin_top = -18.9863
margin_right = 1052.11
margin_bottom = 558.014
rect_scale = Vector2( 0.291509, 0.293189 )
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Voices" type="Node2D" parent="."]
script = ExtResource( 49 )

[node name="Richard" type="Node2D" parent="Voices"]

[node name="RichardVoice7" type="AudioStreamPlayer" parent="Voices/Richard"]
stream = ExtResource( 35 )
volume_db = 8.0

[node name="RichardVoice8" type="AudioStreamPlayer" parent="Voices/Richard"]
stream = ExtResource( 18 )
volume_db = 8.0

[node name="RichardVoice9" type="AudioStreamPlayer" parent="Voices/Richard"]
stream = ExtResource( 17 )
volume_db = 8.0

[node name="Francesca" type="Node2D" parent="Voices"]

[node name="FrancescaVoice3" type="AudioStreamPlayer" parent="Voices/Francesca"]
stream = ExtResource( 13 )
volume_db = -4.0

[node name="Luigi" type="Node2D" parent="Voices"]

[node name="LuigiVoice4" type="AudioStreamPlayer" parent="Voices/Luigi"]
stream = ExtResource( 16 )

[node name="LuigiVoice3" type="AudioStreamPlayer" parent="Voices/Luigi"]
stream = ExtResource( 23 )

[node name="Narator" type="Node2D" parent="Voices"]

[node name="NaratorVoice11" type="AudioStreamPlayer" parent="Voices/Narator"]
stream = ExtResource( 26 )

[node name="NaratorVoice12" type="AudioStreamPlayer" parent="Voices/Narator"]
stream = ExtResource( 24 )

[node name="NaratorVoice13" type="AudioStreamPlayer" parent="Voices/Narator"]
stream = ExtResource( 25 )

[node name="NaratorVoice14" type="AudioStreamPlayer" parent="Voices/Narator"]
stream = ExtResource( 22 )

[node name="Question" type="TextureButton" parent="."]
margin_left = 923.786
margin_top = 1.52588e-05
margin_right = 1075.79
margin_bottom = 145.0
rect_scale = Vector2( 0.648164, 0.63789 )
texture_normal = ExtResource( 20 )
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundRef" type="AudioStreamPlayer" parent="Question"]

[node name="AnimationPlayerPirates" type="AnimationPlayer" parent="."]
anims/Leave = SubResource( 1 )
[connection signal="mouse_entered" from="YesButton" to="YesButton" method="_on_YesButton_mouse_entered"]
[connection signal="pressed" from="YesButton" to="YesButton" method="_on_YesButton_pressed"]
[connection signal="mouse_entered" from="NoButton" to="NoButton" method="_on_NoButton_mouse_entered"]
[connection signal="pressed" from="NoButton" to="NoButton" method="_on_NoButton_pressed"]
[connection signal="pressed" from="Question" to="Question" method="_on_Question_pressed"]
[connection signal="animation_finished" from="AnimationPlayerPirates" to="NoButton" method="_on_AnimationPlayerPirates_animation_finished"]
